external-crates/move/crates/move-compiler/tests/move_check/expansion/friend_decl_inner_scope_alias.exp
error[E03006]: unexpected name in this position
  ┌─ tests/move_check/expansion/friend_decl_inner_scope_alias.move:7:12
  │
7 │     friend A;
  │            ^ Unexpected address identifier. An address identifier is not a valid module

